force-app/main/default/objects/CustomerProperty/fields/Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Number__c</fullName>
    <description>SFP-12614 Used to indicate Finance or mortgage reference number</description>
    <inlineHelpText>Finance or mortgage agreement reference number</inlineHelpText>
    <label>Agreement Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>