force-app/main/default/objects/CustomerProperty/fields/Cover_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Cover_Effective_Date__c</fullName>
    <description>SFP-12614  - Date cover comes into effect.</description>
    <inlineHelpText>Date cover comes into effect.</inlineHelpText>
    <label>Cover Effective Date</label>
    <type>Date</type>
</CustomField>