force-app/main/default/objects/CustomerProperty/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>SFP-12614  - Description of Customer Property.</description>
    <inlineHelpText>Description of Customer Property.</inlineHelpText>
    <label>Description</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>