force-app/main/default/objects/CustomerProperty/fields/Finance_House__c.field-meta.xml
<CustomField>
    <fullName>Finance_House__c</fullName>
    <description>SFP-12614  - Company name financing the asset.</description>
    <inlineHelpText>Company name financing the asset.</inlineHelpText>
    <label>Finance House</label>
    <length>40</length>
    <type>Text</type>
</CustomField>