force-app/main/default/objects/CustomerProperty/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>SFP-12614 - Identification number of the asset.</description>
    <inlineHelpText>Identification number of the asset.</inlineHelpText>
    <label>Serial Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>