force-app/main/default/objects/CustomerProperty/recordTypes/Equipment.recordType-meta.xml
<RecordType>
    <fullName>Equipment</fullName>
    <active>true</active>
    <description>Used to capture unique details about a customer&apos;s equipment asset(s)</description>
    <label>Equipment</label>
</RecordType>