force-app/main/default/objects/CustomerProperty/recordTypes/Motor.recordType-meta.xml
<RecordType>
    <fullName>Motor</fullName>
    <active>true</active>
    <description>Used to capture unique details about a customer&apos;s motor asset(s)</description>
    <label>Motor</label>
</RecordType>