force-app/main/default/objects/CustomerProperty/recordTypes/Property.recordType-meta.xml
<RecordType>
    <fullName>Property</fullName>
    <active>true</active>
    <description>Used to capture unique details about a customer&apos;s property asset(s)</description>
    <label>Property</label>
</RecordType>