force-app/main/default/objects/CustomerProperty/validationRules/Mandatory_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Address</fullName>
    <active>true</active>
    <description>SFP-10316 The Address is mandatory for all RecordTypes</description>
    <errorConditionFormula>OR(
  ISBLANK( Street ),
  ISBLANK( City ),
  ISBLANK( PostalCode ),
  ISBLANK( Country )
)</errorConditionFormula>
    <errorMessage>The Address is a mandatory field for all Record Types</errorMessage>
</ValidationRule>